FIX: greeting position on mobile

--- a/portfolio/media_queries.css
+++ b/portfolio/media_queries.css
@@ -304,8 +304,8 @@
     /*}*/
 
     .parallax .greeting {
-        left: 50%;
-        top: 100px;
+        left: 47%;
+        top: 95px;
     }
 
     .parallax .first-line {
